Fixed issue with mini shopping cart alignment. Using self-written library

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -128,6 +128,7 @@ a {text-decoration: none;color:#000;font-size: 22.56px;line-height: 26px;}
         border: 1px solid #67539E;
         border-radius: 3px;
         box-shadow: 0px 7px 6px 0px #242424;
+        margin: 41px -176px;
     }
     .cart_wrapper{
         display:block;
